updated userPrincipal GlobalException Handler