@@ -1,11 +1,7 @@
 package com.springimplant.cms.entities;
 
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
-import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -25,10 +21,9 @@ public class UserPrincipal implements UserDetails {
 
 	@Override
 	public Collection<? extends GrantedAuthority> getAuthorities() {
-		
 		return Arrays.stream(user.getRoles().split(","))
 		.map(SimpleGrantedAuthority::new)
-		.collect(Collectors.toList());
+		.toList();
 	}
 
 	@Override
@@ -58,7 +53,7 @@ public class UserPrincipal implements UserDetails {
 
 	@Override
 	public boolean isEnabled() {
-		return true;
+		return user.isActive();
 	}
 
 }
